Source/JavaScriptCore/runtime/Options.cpp
@@ -89,18 +89,15 @@ static bool parse(const char* string, unsigned& value)
     return sscanf(string, "%u", &value) == 1;
 }
 
-#pragma GCC diagnostic push
-#pragma GCC diagnostic ignored "-Wunused-function"
 static bool parse(const char* string, unsigned long& value)
 {
     return sscanf(string, "%lu", &value);
 }
 
-static bool parse(const char* string, unsigned long long& value)
+static bool UNUSED_FUNCTION parse(const char* string, unsigned long long& value)
 {
     return sscanf(string, "%llu", &value);
 }
-#pragma GCC diagnostic pop
 
 static bool parse(const char* string, double& value)
 {
